# neo-chatten

./: .env.example  README.md  main.py  pyproject.toml
agents/: __init__.py  chatten_trader.py
contracts/: __init__.py  chatten_token.py
tests/: __init__.py  test_agent.py  test_contract.py  test_tools.py
tools/: __init__.py  market_tools.py  neo_bridge.py  token_tools.py
