[project]
name = "chatten"
version = "0.1.0"
description = "Decentralized Exchange for AI Compute Tokens on Neo N3"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Chatten Team", email = "dev@chatten.io" }
]
keywords = ["neo", "blockchain", "dex", "ai", "compute", "tokens", "spoonos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # SpoonOS Agent Framework
    "spoon-ai-sdk>=0.1.0",
    
    # Neo N3 Blockchain
    "neo-mamba>=2.0.0",
    "neo3-boa>=1.0.0",
    
    # AI/LLM
    "openai>=1.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Logging & Monitoring
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://chatten.io"
Documentation = "https://docs.chatten.io"
Repository = "https://github.com/chatten/neo-chatten"
Issues = "https://github.com/chatten/neo-chatten/issues"

[project.scripts]
chatten = "chatten.main:main"
chatten-agent = "chatten.agents.chatten_trader:create_trader_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "contracts", "tools"]

# =============================================================================
# TOOL CONFIGURATION
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["agents", "contracts", "tools"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
source = ["agents", "contracts", "tools"]
omit = ["tests/*", "*/__init__.py"]
